force-app/main/default/objects/Challenge__c/fields/Allow_Idea_Submission__c.field-meta.xml
<CustomField>
    <fullName>Allow_Idea_Submission__c</fullName>
    <formula>ISPICKVAL( Status__c , &quot;Published&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Idea Submission</label>
    <type>Checkbox</type>
</CustomField>