force-app/main/default/objects/Challenge__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>The author or sponsor of the challenge</description>
    <label>Author</label>
    <length>150</length>
    <type>Text</type>
</CustomField>