force-app/main/default/objects/Challenge__c/fields/Author_Image__c.field-meta.xml
<CustomField>
    <fullName>Author_Image__c</fullName>
    <description>The profile image of the author</description>
    <inlineHelpText>The profile image of the author. Only upload a single image in this field.</inlineHelpText>
    <label>Author Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>