force-app/main/default/objects/Challenge__c/fields/Banner_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Banner_Background_Color__c</fullName>
    <inlineHelpText>Specifies the background color of header banner in the Innovation Hub Community. Try to use a color that matches the image. e.g. rgb(13, 19, 53)</inlineHelpText>
    <label>Banner Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>