force-app/main/default/objects/Challenge__c/fields/Banner_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Banner_Text_Color__c</fullName>
    <inlineHelpText>Specifies the text color of the header banner in the Innovation Hub Community. e.g. rgb(13, 19, 53)</inlineHelpText>
    <label>Banner Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>