force-app/main/default/objects/Challenge__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The picklist values of this field can be changed to fit your specific use case. Category suggestions might be different business units.</description>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
            <value>
                <fullName>Value 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>