force-app/main/default/objects/Challenge__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>This is visible on the record banner in the Innovation Hub Community</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>