force-app/main/default/objects/Challenge__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The Challenge will only appear between the start and end dates if specified.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>