force-app/main/default/objects/Challenge__c/fields/Video_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_File_Id__c</fullName>
    <inlineHelpText>To upload a file navigate to App Launcher → Files → Upload Files.
To access the file id click on the arrow next to the file and then “View File Details”. Copy the Id from the url.</inlineHelpText>
    <label>Video File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>