force-app/main/default/objects/Challenge__c/fields/Video_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Title__c</fullName>
    <label>Video Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>