force-app/main/default/objects/Challenge__c/fields/Video_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_Url__c</fullName>
    <inlineHelpText>The video player can play videos from Vimeo, YouTube or Google Drive. 
Ensure the sources are whitelisted in your CSP Trusted Sites.</inlineHelpText>
    <label>Video Url</label>
    <type>Url</type>
</CustomField>